# phi4

./: .gitignore  Cargo.toml  LICENSE  README.md  doc.txt
src/: main.rs  phi4.rs
